<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--menu item added-->
    <item
        android:id="@+id/category_sort"
        android:title="@string/category_menu"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_dropdown0"
                android:title="@string/category_0" />
            <item
                android:id="@+id/action_dropdown1"
                android:title="@string/category_1" />
            <item
                android:id="@+id/action_dropdown2"
                android:title="@string/category_2" />
            <item
                android:id="@+id/action_dropdown3"
                android:title="@string/category_3" />
            <item
                android:id="@+id/action_dropdown4"
                android:title="@string/category_4" />
        </menu>

    </item>
</menu>